# portAIble

./: .env.example  .gitignore  README.md  api-design.md  pyproject.toml
backend/src/portaible/: __init__.py  __main__.py  app.py  config.py
backend/src/portaible/api/: __init__.py  decisions.py  deps.py  jobs.py  pipeline.py  profiles.py  prompt.py  prompt_bank.py  schemas.py  sessions.py  source.py
backend/src/portaible/domain/: __init__.py  design_decision.py  destination_profile.py  pipeline_job.py  prompt.py  session.py  source_profile.py
backend/src/portaible/jobs/: __init__.py  registry.py
backend/src/portaible/ports/: __init__.py  ai_pipeline.py  design_decisions.py  job_repo.py  prompt_bank.py  session_repo.py  source_analyzer.py  source_extractor.py
backend/src/portaible/usecases/: __init__.py  (+9 more)
backend/tests/: conftest.py
backend/tests/integration/: test_phase1_e2e.py  test_phase2_analyze_job.py  test_phase3_destination.py  test_phase4_decisions.py  test_phase5_github.py  test_phase6_prompt_edit.py
backend/tests/unit/: test_prompt_bank.py  test_session_fsm.py  test_source_picker.py
frontend/: .gitignore  README.md  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/app/components/: EditableList.vue
frontend/app/composables/: useApi.ts  useErrorToast.ts
frontend/app/pages/: index.vue
frontend/e2e/: happy-path.spec.ts
prompt-bank/: README.md
prompt-bank/frameworks/: django.md  nuxt2.md  nuxt4.md  springboot.md
prompt-bank/transitions/: django-springboot.md  nuxt2-nuxt4.md
scripts/: install-playwright.sh
(+30 files in other folders)
